--- a/manifest.json
+++ b/manifest.json
@@ -68,5 +68,14 @@
     "uniStatistics" : {
         "enable" : false
     },
-    "vueVersion" : "2"
+    "vueVersion" : "2",
+    "h5" : {
+        "sdkConfigs" : {
+            "maps" : {
+                "qqmap" : {
+                    "key" : "XO7BZ-36A3I-APAGU-UA2VG-BONXV-GRBKX"
+                }
+            }
+        }
+    }
 }
